# ufv-timesheet-util

./: .gitignore  Cargo.toml  README.md
examples/: standalone.rs
src/: lib.rs  service.rs
src/helpers/: email.rs  mod.rs  notion.rs  pdf.rs
src/models/: notion.rs
templates/: README.md
