[package]
name = "ufv-timesheet-util"
version = "0.1.0"
edition = "2024"

[lib]
name = "ufv_timesheet_util"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
lopdf = "=0.36.0"
reqwest = "0.12.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.140"
resend-rs = "0.14.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.41"
tracing = "0.1"
anyhow = "1.0.98"

[dev-dependencies]
tracing-subscriber = "0.3"
